--- a/style.css
+++ b/style.css
@@ -1,7 +1,44 @@
+/* Global Layout */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  color: #000000;
+}
+
+/* Main Content Wrapper */
+main {
+  flex: 1;
+}
+
+/* Navbar */
+.navbar {
+  background-color: #725CAD !important;
+}
+
+.navbar .navbar-brand,
+.navbar .nav-link {
+  color: #ffffff !important;
+}
+
+/* Jumbotron */
 .jumbotron {
   background-color: #D1BB9E;
   padding-top: 6rem;
   padding-bottom: 3rem;
+}
+
+/* Section: Biodata, About, Projects, Contact */
+#bio {
+  background-color: #ffffff;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 #about {
@@ -11,13 +48,46 @@
 }
 
 #projects {
-  background-color: #fff;
+  background-color: #ffffff;
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
 
 #contact {
   background-color: #6c52a5;
+  color: white;
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+
+/* Footer */
+.footer {
+  background-color: #725CAD;
+  color: white;
+  text-align: center;
+  padding: 40px 0;
+}
+
+/* Image */
+.rounded-circle {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
+/* Card */
+.card {
+  background-color: #ffffff;
+  border: none;
+}
+
+/* Button */
+.btn-primary {
+  background-color: #000000;
+  border-color: #000000;
+}
+
+.btn-primary:hover {
+  background-color: #333333;
+  border-color: #333333;
 }
